--- a/Fitness-App/package.json
+++ b/Fitness-App/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
+    "clsx": "^2.1.1",
+    "date-fns": "^3.6.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.3",
     "react-dom": "^18.2.0",
