--- a/Fitness-App/package.json
+++ b/Fitness-App/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "devstart": "nodemon src/Backend/server.js"
   },
   "dependencies": {
     "axios": "^1.7.2",
