--- a/Fitness-App/package.json
+++ b/Fitness-App/package.json
@@ -14,7 +14,10 @@
     "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
     "clsx": "^2.1.1",
+    "cors": "^2.8.5",
     "date-fns": "^3.6.0",
+    "express": "^4.19.2",
+    "mongoose": "^8.5.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.3",
     "react-dom": "^18.2.0",
