--- a/Fitness-App/package.json
+++ b/Fitness-App/package.json
@@ -17,6 +17,7 @@
     "cors": "^2.8.5",
     "d3": "^7.9.0",
     "date-fns": "^3.6.0",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "mongoose": "^8.5.0",
     "react": "^18.2.0",
