--- a/Fitness-App/package.json
+++ b/Fitness-App/package.json
@@ -18,8 +18,9 @@
     "d3": "^7.9.0",
     "date-fns": "^3.6.0",
     "dotenv": "^16.4.5",
+    "ejs": "^3.1.10",
     "express": "^4.19.2",
-    "mongoose": "^8.5.0",
+    "mongoose": "^8.5.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.3",
     "react-dom": "^18.2.0",
@@ -33,6 +34,7 @@
     "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
+    "nodemon": "^3.1.4",
     "react-router-dom": "^6.23.1",
     "vite": "^5.2.0"
   }
